<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" android:id="@+id/menutop">
        <item
            android:id="@+id/principal"
            android:title="@string/principal"
            android:orderInCategory="1">
        </item>

        <item
            android:id="@+id/nav_latidos"
            android:title="@string/latidos"
            android:orderInCategory="2">
        </item>

        <item
            android:id="@+id/nav_fc"
            android:title="@string/fc"
            android:orderInCategory="3">
        </item>

        <item
            android:id="@+id/resumen"
            android:title="@string/resumen"
            android:orderInCategory="4">
        </item>

        <item
            android:id="@+id/nav_ha"
            android:title="@string/ha"
            android:orderInCategory="5"/>

        <item
            android:id="@+id/sintomas"
            android:title="@string/sintomas"
            android:orderInCategory="6" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/menubottom">
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/settings"
            android:title="@string/action_settings"
            android:orderInCategory="7"/>
    </group>
</menu>
